# sps30-py

./: README.md  pyproject.toml  sps30.py
examples/: flask_endpoint.py  plot_measurements.py
