[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sps30"
version = "0.1.0"
description = "Python library for Sensirion SPS30 particulate matter sensor"

[dependencies]
pyparsing = "3.1.1"

[tool.black]
line-length = 79
preview = true

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = [
  "serial",
  "matplotlib.*"
]
ignore_missing_imports = true

[tool.ruff]
select = ["E", "F", "D", "I", "N", "W", "UP", "RUF", "COM", "A", "B", "PT", "Q", "RET", "ARG", "NPY", "PERF"]
ignore = ["D10"]
exclude = ["docs"]
line-length = 79
target-version = "py311"

[tool.ruff.pydocstyle]
convention = "google"


